--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -30,13 +30,21 @@ delete_log: false                       # Deletes log on every restart, if set t
 no_proxy: false
 
 [cam 1]
-mode: camera-streamer                         # ustreamer - Provides mjpg and snapshots. (All devices)
-                                        # camera-streamer - Provides webrtc, mjpg and snapshots. (rpi + Raspi OS based only)
-enable_rtsp: true                      # If camera-streamer is used, this enables also usage of an rtsp server
-rtsp_port: 8554                         # Set different ports for each device!
-port: 8080                              # HTTP/MJPG Stream/Snapshot Port
+mode: camera-streamer
+enable_rtsp: true
+rtsp_port: 8554
+port: 8080
 device: /dev/v4l/by-id/usb-046d_HD_Pro_Webcam_C920_A892161F-video-index0
 resolution: 1920x1080                     # widthxheight format
 max_fps: 15                             # If Hardware Supports this it will be forced, otherwise ignored/coerced.
-#custom_flags:                          # You can run the Stream Services with custom flags.
 #v4l2ctl:                               # Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
+#
+[cam 2]
+mode: ustreamer
+enable_rtsp: false
+rtsp_port: 8555
+port: 8081
+device: /dev/v4l/by-id/usb-HD_Web_Camera_HD_Web_Camera_Ucamera001-video-index0
+resolution: 1280x720
+max_fps: 15
+#v4l2ctl:
