--- a/macros.cfg
+++ b/macros.cfg
@@ -212,7 +212,7 @@ gcode:
     CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
     White
-    #LINE_PURGE
+    LINE_PURGE
     #VORON_PURGE
     #SFS_ENABLE
     SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
