--- a/moonraker.conf
+++ b/moonraker.conf
@@ -79,3 +79,11 @@ managed_services: crowsnest
 install_script: tools/pkglist.sh
 
 [include moonraker-obico-update.cfg]
+
+[update_manager moonraker-telegram-bot]
+type: git_repo
+path: ~/moonraker-telegram-bot
+origin: https://github.com/nlef/moonraker-telegram-bot.git
+env: ~/moonraker-telegram-bot-env/bin/python
+requirements: scripts/requirements.txt
+install_script: scripts/install.sh
