--- a/printer.cfg
+++ b/printer.cfg
@@ -25,6 +25,8 @@ resolution: 0.1
 
 [state_notify]
 
+[respond]
+
 [virtual_sdcard]
 path: /home/pi/printer_data/gcodes
 
@@ -50,6 +52,7 @@ path: /home/pi/printer_data/gcodes
 [include nevermore.cfg]
 [include filament_sensor.cfg]
 [include moonraker_obico_macros.cfg]
+[include telegram_bot.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -305,7 +308,7 @@ mesh_min: 40, 40
 mesh_max: 310,310
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 5,5
+probe_count: 9,9
 algorithm: bicubic
 #relative_reference_index: 12
 zero_reference_position: 175, 175
