Happy Haregit status!

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,9 +1,13 @@
+[include mmu/base/*.cfg]
+[include mmu/optional/client_macros.cfg]
 #####################################################################
 #   Main
 #####################################################################
 
 [mcu]
-canbus_uuid: 4341f13a370e
+serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0F002A001750535556323420-if00
+restart_method: command
+#canbus_uuid: 4341f13a370e
 
 [printer]
 kinematics: corexy
