--- a/moonraker.conf
+++ b/moonraker.conf
@@ -87,3 +87,27 @@ origin: https://github.com/nlef/moonraker-telegram-bot.git
 env: ~/moonraker-telegram-bot-env/bin/python
 requirements: scripts/requirements.txt
 install_script: scripts/install.sh
+
+[update_manager happy-hare]
+type: git_repo
+path: ~/Happy-Hare
+origin: https://github.com/moggieuk/Happy-Hare.git
+primary_branch: main
+install_script: install.sh
+managed_services: klipper
+
+[mmu_server]
+enable_file_preprocessor: True
+
+
+
+[update_manager KlipperScreen]
+type: git_repo
+path: ~/KlipperScreen
+origin: https://github.com/moggieuk/KlipperScreen-Happy-Hare-Edition.git
+env: ~/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
+managed_services: KlipperScreen
+
+
