--- a/mmu/base/mmu_hardware.cfg
+++ b/mmu/base/mmu_hardware.cfg
@@ -185,43 +185,43 @@ sync_feedback_tension_pin:
 sync_feedback_compression_pin: 
 
 
-## MMU OPTIONAL NEOPIXEL LED SUPPORT ----------------------------------------------------------------------------------------
-## Define the led connection, type and length
-##
-#[neopixel mmu_leds]
-#pin: mmu:MMU_NEOPIXEL
-#chain_count: 9			# Number gates x1 or x2 + 1 (if you want status)
-#color_order: GRBW		# Set based on your particular neopixel specification
+# MMU OPTIONAL NEOPIXEL LED SUPPORT ----------------------------------------------------------------------------------------
+# Define the led connection, type and length
 #
+[neopixel mmu_leds]
+pin: mmu:MMU_NEOPIXEL
+chain_count: 9			# Number gates x1 or x2 + 1 (if you want status)
+color_order: GRBW		# Set based on your particular neopixel specification
+
+
+# MMU LED EFFECT SEGMENTS --------------------------------------------------------------------------------------------------
+# NOTE IT HARMLESS TO LEAVE THIS SECTION - IT IS INACTIVE UNLESS 'led_strip' can be found by uncommenting [neopixel] above
 #
-## MMU LED EFFECT SEGMENTS --------------------------------------------------------------------------------------------------
-## NOTE IT HARMLESS TO LEAVE THIS SECTION - IT IS INACTIVE UNLESS 'led_strip' can be found by uncommenting [neopixel] above
-##
-## Define neopixel LEDs for your MMU. The chain_count must be large enough for your defined effect ranges. These ranges are:
-##   exit   .. this set of LEDs, one for every gate, usually would be mounted at the exit point of the gate
-##   entry  .. this set of LEDs, one for every gate, could be mounted at the entry point of filament into the MMU
-##   status .. this single LED represents the status of the currently selected filament, typically  mounted on selection mechanism
-##
-## Note that all sets are optional. You can opt simple to have just the 'exit' set for example. The advantage to having
-## both entry and exit LEDs is that the 'entry'ones can display gate status while the 'exit' one displays the filament color
-## 
-## The effects requires the installation of Julian Schill's awesome LED effect module: https://github.com/julianschill/klipper-led_effect
-## LED's are indexed in the chain from 1..N. Thus to set up LED's on 'exit' and a single 'status' LED on a 4 gate MMU:
-##   exit_range:   1-4
-##   status_index: 5
-## In this example no 'entry' set is configured.
-##
-## Note the range order is important and depends on your wiring. Thus 1-4 and 4-1 both represent the same LED range but mapped
-## to different gates
-##
-## Happy Hare provides a convenience wrapper [mmu_led_effect] that not only creates an effect on each of the [mmu_leds] specified
-## segments but also each individual LED for atomic control.
-##
-#[mmu_leds]
-#num_gates: 8
-#led_strip: neopixel:mmu_leds
-#exit_range: 1-8
-##entry_range: 9-{mmu_num_leds}
-#status_index: 9
-#frame_rate: 24
+# Define neopixel LEDs for your MMU. The chain_count must be large enough for your defined effect ranges. These ranges are:
+#   exit   .. this set of LEDs, one for every gate, usually would be mounted at the exit point of the gate
+#   entry  .. this set of LEDs, one for every gate, could be mounted at the entry point of filament into the MMU
+#   status .. this single LED represents the status of the currently selected filament, typically  mounted on selection mechanism
 #
+# Note that all sets are optional. You can opt simple to have just the 'exit' set for example. The advantage to having
+# both entry and exit LEDs is that the 'entry'ones can display gate status while the 'exit' one displays the filament color
+# 
+# The effects requires the installation of Julian Schill's awesome LED effect module: https://github.com/julianschill/klipper-led_effect
+# LED's are indexed in the chain from 1..N. Thus to set up LED's on 'exit' and a single 'status' LED on a 4 gate MMU:
+#   exit_range:   1-4
+#   status_index: 5
+# In this example no 'entry' set is configured.
+#
+# Note the range order is important and depends on your wiring. Thus 1-4 and 4-1 both represent the same LED range but mapped
+# to different gates
+#
+# Happy Hare provides a convenience wrapper [mmu_led_effect] that not only creates an effect on each of the [mmu_leds] specified
+# segments but also each individual LED for atomic control.
+#
+[mmu_leds]
+num_gates: 8
+led_strip: neopixel:mmu_leds
+exit_range: 1-8
+#entry_range: 9-{mmu_num_leds}
+status_index: 9
+frame_rate: 24
+
