--- a/mmu/base/mmu.cfg
+++ b/mmu/base/mmu.cfg
@@ -28,7 +28,7 @@ aliases:
     MMU_SEL_ENDSTOP=PB2,
     MMU_SERVO=PA0,
     MMU_ENCODER=PA1,
-    MMU_GATE_SENSOR=,
+    MMU_GATE_SENSOR=PA3,
     MMU_NEOPIXEL=PA2,
     MMU_PRE_GATE_0=PB9,
     MMU_PRE_GATE_1=PB8,
