--- a/mmu/mmu_vars.cfg
+++ b/mmu/mmu_vars.cfg
@@ -1,5 +1,13 @@
 [Variables]
 mmu_calibration_0 = 1.0
-mmu_state_gate_selected = -1
-mmu_state_tool_selected = -1
+mmu_calibration_bowden_length = 0.0
+mmu_encoder_resolution = 33.333333
+mmu_gear_rotation_distance = 22.167364
+mmu_selector_bypass = 179.88000000000002
+mmu_selector_offsets = [2.2, 25.7, 49.1, 72.5, 95.9, 119.4, 142.8, 166.2]
+mmu_state_filament_pos = 0
+mmu_state_gate_selected = 0
+mmu_state_gate_status = [1, 0, 0, 0, 0, 0, 0, 0]
+mmu_state_tool_selected = 0
+mmu_state_tool_to_gate_map = [0, 1, 2, 3, 4, 5, 6, 7]
 
