--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include mainsail.cfg]
 [include mmu/base/*.cfg]
 [include mmu/optional/client_macros.cfg]
 #####################################################################
@@ -224,7 +225,7 @@ max_temp: 200
 #####################################################################
 
 [probe]
-pin: ^sb2040:LIMIT_1
+pin: ^sb2040:TAP
 x_offset: 0
 y_offset: 0
 #z_offset: 0
@@ -342,9 +343,9 @@ sensor_type: temperature_mcu
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.561
-#*# pid_ki = 2.588
-#*# pid_kd = 73.380
+#*# pid_kp = 18.629
+#*# pid_ki = 1.350
+#*# pid_kd = 64.272
 #*#
 #*# [probe]
 #*# z_offset = -0.475
@@ -352,11 +353,11 @@ sensor_type: temperature_mcu
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.015000, 0.015000, 0.005000, -0.002500, 0.035000
-#*# 	  0.015000, 0.010000, -0.000000, -0.000000, 0.027500
-#*# 	  0.015000, 0.010000, 0.000000, -0.005000, 0.017500
-#*# 	  0.045000, 0.040000, 0.030000, 0.025000, 0.037500
-#*# 	  0.062500, 0.045000, 0.032500, 0.037500, 0.030000
+#*# 	0.015000, 0.015000, 0.005000, -0.002500, 0.035000
+#*# 	0.015000, 0.010000, -0.000000, -0.000000, 0.027500
+#*# 	0.015000, 0.010000, 0.000000, -0.005000, 0.017500
+#*# 	0.045000, 0.040000, 0.030000, 0.025000, 0.037500
+#*# 	0.062500, 0.045000, 0.032500, 0.037500, 0.030000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
