--- a/sb2040.cfg
+++ b/sb2040.cfg
@@ -7,7 +7,7 @@ aliases:
 aliases_2209:
     EXT_EN=gpio7,EXT_STEP=gpio9,EXT_DIR=gpio10,EXT_UART=gpio8
 aliases_endstop:
-    LIMIT_0=gpio25,LIMIT_1=gpio28,LIMIT_2=gpio29
+    ENTRY_SENSOR=gpio25,TAP=gpio28,TOOLHEAD_SENSOR=gpio29
 aliases_cnc_fans:
     FAN0=gpio13,FAN1=gpio14,FAN2=gpio15
 aliases_thermistors:
