--- a/mmu/base/mmu_hardware.cfg
+++ b/mmu/base/mmu_hardware.cfg
@@ -178,8 +178,8 @@ pre_gate_switch_pin_10: ^mmu:MMU_PRE_GATE_10
 pre_gate_switch_pin_11: ^mmu:MMU_PRE_GATE_11
 
 gate_switch_pin: ^mmu:MMU_GATE_SENSOR
-extruder_switch_pin: 
-toolhead_switch_pin: 
+extruder_switch_pin: ^sb2040:ENTRY_SENSOR
+toolhead_switch_pin: ^sb2040:TOOLHEAD_SENSOR
 
 sync_feedback_tension_pin: 
 sync_feedback_compression_pin: 
@@ -190,7 +190,7 @@ sync_feedback_compression_pin:
 #
 [neopixel mmu_leds]
 pin: mmu:MMU_NEOPIXEL
-chain_count: 9			# Number gates x1 or x2 + 1 (if you want status)
+chain_count: 17			# Number gates x1 or x2 + 1 (if you want status)
 color_order: GRBW		# Set based on your particular neopixel specification
 
 
