--- a/mmu/mmu_vars.cfg
+++ b/mmu/mmu_vars.cfg
@@ -1,13 +1,27 @@
 [Variables]
 mmu_calibration_0 = 1.0
 mmu_calibration_bowden_length = 650.0
+mmu_calibration_clog_length = 15.0
 mmu_encoder_resolution = 33.333333
 mmu_gear_rotation_distance = 22.167364
 mmu_selector_bypass = 179.88000000000002
 mmu_selector_offsets = [2.2, 25.7, 49.1, 72.5, 95.9, 119.4, 142.8, 166.2]
 mmu_state_filament_pos = 0
+mmu_state_gate_color = ['e01b24', '', '', '', '', '', '', '']
+mmu_state_gate_material = ['', '', '', '', '', '', '', '']
 mmu_state_gate_selected = 0
-mmu_state_gate_status = [1, 0, 0, 0, 0, 0, 0, 0]
+mmu_state_gate_speed_override = [100, 100, 100, 100, 100, 100, 100, 100]
+mmu_state_gate_spool_id = [-1, -1, -1, -1, -1, -1, -1, -1]
+mmu_state_gate_status = [0, 0, 0, 0, 0, 0, 0, 0]
 mmu_state_tool_selected = 0
 mmu_state_tool_to_gate_map = [0, 1, 2, 3, 4, 5, 6, 7]
+mmu_statistics_gate_0 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_1 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_2 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_3 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_4 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_5 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_6 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_gate_7 = {'pauses': 0, 'loads': 0, 'load_distance': 0.0, 'load_delta': 0.0, 'unloads': 0, 'unload_distance': 0.0, 'unload_delta': 0.0, 'servo_retries': 0, 'load_failures': 0, 'unload_failures': 0, 'quality': -1.0}
+mmu_statistics_swaps = {'total_swaps': 0, 'time_spent_loading': 0, 'time_spent_unloading': 0, 'total_pauses': 0, 'time_spent_paused': 0}
 
