--- a/moonraker.conf
+++ b/moonraker.conf
@@ -111,3 +111,16 @@ install_script: scripts/KlipperScreen-install.sh
 managed_services: KlipperScreen
 
 
+
+[update_manager mainsail-config]
+type: git_repo
+primary_branch: master
+path: ~/mainsail-config
+origin: https://github.com/mainsail-crew/mainsail-config.git
+managed_services: klipper
+
+[update_manager mainsail]
+type: web
+channel: stable
+repo: mainsail-crew/mainsail
+path: ~/mainsail
