moved to sb2209 and umbilical

--- a/macros.cfg
+++ b/macros.cfg
@@ -214,8 +214,7 @@ gcode:
     White
     LINE_PURGE
     #VORON_PURGE
-    #SFS_ENABLE
-    #SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1
+    ENABLE_FILAMENT_SENSOR
     status_printing
     M117
 
@@ -246,6 +245,7 @@ gcode:
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
     Green
     status_part_ready
+    DISABLE_FILAMENT_SENSOR
     M117
     UPDATE_DELAYED_GCODE ID=filter_off DURATION=360
 
