--- a/printer.cfg
+++ b/printer.cfg
@@ -1,7 +1,3 @@
-[include mmu/addons/*.cfg]
-[include shell_command.cfg]
-[include mmu/base/*.cfg]
-[include mmu/optional/client_macros.cfg]
 #####################################################################
 #   Main
 #####################################################################
@@ -45,19 +41,25 @@ path: /home/pi/printer_data/gcodes
 #   Includes
 #####################################################################
 
-[include sb2040.cfg]
+#[include sb2040.cfg]
+[include sb2209.cfg]
 [include klipperExpander.cfg]
 [include skirt_button_pcb.cfg]
-#[include stealthburner_leds.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
-#[include Voron_Purge.cfg]
 [include KAMP_Settings.cfg]
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
 [include moonraker_obico_macros.cfg]
 [include telegram_bot.cfg]
+[include shell_command.cfg]
+[include filament_sensor.cfg]
+#[include mmu/addons/*.cfg]
+#[include mmu/base/*.cfg]
+#[include mmu/optional/client_macros.cfg]
+#[include stealthburner_leds.cfg]
+#[include Voron_Purge.cfg]
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -70,7 +72,7 @@ enable_pin: !PF14
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:200 
-endstop_pin: PG6
+endstop_pin: EBBCan:XSTOP
 position_min: 0
 position_endstop: 350
 position_max: 350
@@ -178,37 +180,6 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 #####################################################################
-#   Extruder
-#####################################################################
-
-[extruder]
-step_pin: sb2040:EXT_STEP
-dir_pin: sb2040:EXT_DIR
-enable_pin: !sb2040:EXT_EN
-rotation_distance: 22.6
-gear_ratio: 50:10
-microsteps: 16
-max_extrude_only_distance: 101
-full_steps_per_rotation: 200
-nozzle_diameter: 0.400
-filament_diameter: 1.75
-heater_pin: sb2040:HE0
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: sb2040:TH0
-min_temp: 10
-max_temp: 270
-max_power: 1.0
-min_extrude_temp: 170
-max_extrude_cross_section: 5
-
-[tmc2209 extruder]
-uart_pin: sb2040:EXT_UART
-interpolate: false
-run_current: 0.45
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
-#####################################################################
 #   Bed Heater
 #####################################################################
 
@@ -221,54 +192,8 @@ min_temp: 0
 max_temp: 200
 
 #####################################################################
-#   Probe
-#####################################################################
-
-[probe]
-pin: ^sb2040:TAP
-x_offset: 0
-y_offset: 0
-#z_offset: 0
-speed: 7
-samples: 3
-samples_result: median
-sample_retract_dist: 2.0
-samples_tolerance: 0.01
-samples_tolerance_retries: 3
-activate_gcode:
-    {% set PROBE_TEMP = 150 %}
-    {% set MAX_TEMP = PROBE_TEMP + 5 %}
-    {% set ACTUAL_TEMP = printer.extruder.temperature %}
-    {% set TARGET_TEMP = printer.extruder.target %}
-
-    {% if TARGET_TEMP > PROBE_TEMP %}
-        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
-        M109 S{ PROBE_TEMP }
-    {% else %}
-        # Temperature target is already low enough, but nozzle may still be too hot.
-        {% if ACTUAL_TEMP > MAX_TEMP %}
-            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
-            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
-        {% endif %}
-    {% endif %}
-
-[settling_probe]
-    
-#####################################################################
 #   Fan Control
 #####################################################################
-
-[fan]
-pin: sb2040:FAN0
-kick_start_time: 0.5
-off_below: 0.10
-
-[heater_fan hotend_fan]
-pin: sb2040:FAN1
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
 
 [controller_fan controller_fan]
 pin: PD12
@@ -343,9 +268,9 @@ sensor_type: temperature_mcu
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 18.629
-#*# pid_ki = 1.350
-#*# pid_kd = 64.272
+#*# pid_kp = 27.561
+#*# pid_ki = 2.588
+#*# pid_kd = 73.380
 #*#
 #*# [probe]
 #*# z_offset = -0.475
