--- a/mmu/base/mmu_hardware.cfg
+++ b/mmu/base/mmu_hardware.cfg
@@ -62,7 +62,7 @@
 #
 [tmc2209 stepper_mmu_gear]
 uart_pin: mmu:MMU_GEAR_UART
-run_current: 0.5			# ERCF BOM NEMA14 motor
+run_current: 0.6		# ERCF BOM NEMA14 motor
 hold_current: 0.1			# Recommend to be small if not using "touch" or move (TMC stallguard)
 interpolate: True
 sense_resistor: 0.110			# Usually 0.11, 0.15 for BTT TMC2226
@@ -91,7 +91,7 @@ full_steps_per_rotation: 200		# 200 for 1.8 degree, 400 for 0.9 degree
 #
 [tmc2209 stepper_mmu_selector]
 uart_pin: mmu:MMU_SEL_UART
-run_current: 0.4			# ERCF BOM NEMA17 motor
+run_current: 0.5			# ERCF BOM NEMA17 motor
 hold_current: 0.2			# Can be small if not using "touch" movement (TMC stallguard)
 interpolate: True
 sense_resistor: 0.110
@@ -227,7 +227,7 @@ color_order: GRBW		# Set based on your particular neopixel specification
 num_gates: 8
 led_strip: neopixel:mmu_leds
 exit_range: 1-8
-#entry_range: 9-{mmu_num_leds}
+entry_range: 10-17
 status_index: 9
 frame_rate: 24
 
