--- a/stealthburner_led_effects_3_leds.cfg
+++ b/stealthburner_led_effects_3_leds.cfg
@@ -56,7 +56,7 @@
 
 
 [neopixel sb_leds]
-pin: sb2040:RGBLED
+pin: EBBCan:RGBLED
 #   The pin connected to the neopixel. This parameter must be provided.
 chain_count: 3
 #   The number of Neopixel chips that are "daisy chained" to the
