--- a/printer.cfg
+++ b/printer.cfg
@@ -54,10 +54,10 @@ path: /home/pi/printer_data/gcodes
 [include moonraker_obico_macros.cfg]
 [include telegram_bot.cfg]
 [include shell_command.cfg]
-[include filament_sensor.cfg]
-#[include mmu/addons/*.cfg]
-#[include mmu/base/*.cfg]
-#[include mmu/optional/client_macros.cfg]
+#[include filament_sensor.cfg]
+[include mmu/addons/*.cfg]
+[include mmu/base/*.cfg]
+[include mmu/optional/client_macros.cfg]
 #[include stealthburner_leds.cfg]
 #[include Voron_Purge.cfg]
 
