--- a/sb2209.cfg
+++ b/sb2209.cfg
@@ -17,7 +17,7 @@ aliases_endstop:
 aliases_rgb:
     RGBLED=PD3
 
-[temperature_sensor EBB_NTC]
+[temperature_sensor Toolhead]
 sensor_type: Generic 3950
 sensor_pin: EBBCan: PA2
 
