--- a/mmu/base/mmu_hardware.cfg
+++ b/mmu/base/mmu_hardware.cfg
@@ -183,8 +183,8 @@ pre_gate_switch_pin_10: ^mmu:MMU_PRE_GATE_10
 pre_gate_switch_pin_11: ^mmu:MMU_PRE_GATE_11
 
 gate_switch_pin: ^mmu:MMU_GATE_SENSOR
-extruder_switch_pin: ^sb2040:ENTRY_SENSOR
-toolhead_switch_pin: ^sb2040:TOOLHEAD_SENSOR
+extruder_switch_pin: ^EBBCan:ENTRY_SENSOR
+toolhead_switch_pin: ^EBBCan:TOOLHEAD_SENSOR
 
 sync_feedback_tension_pin: 
 sync_feedback_compression_pin: 
