--- a/macros.cfg
+++ b/macros.cfg
@@ -17,7 +17,7 @@ gcode:
     M117 Heat Soaking...
     SET_FAN_SPEED FAN=Nevermore SPEED=1
 	M104 S150 ; set hotend to 150 and don't wait
-	M140 S{ params.HEATSOAK_TEMP|default(110)|int } ; heat bed and don't wait
+	M140 S{ params.HEATSOAK_TEMP|default(0)|int } ; heat bed and don't wait
 	CG28 ; conditional home
 	G90 ; absolute positioning
 	G1 X55 Y350 F6800 ; Move to bucket
@@ -127,57 +127,6 @@ gcode:
 gcode:
     SET_LED LED=CaseLights RED=1 GREEN=1 BLUE=1
 
-[delayed_gcode shutdown_machine]
-gcode:
-     LightsOff
-     {action_call_remote_method("shutdown_machine")}
-initial_duration: 0.0
-
-#[menu __main __poweroff]
-#type: command
-#enable: {printer.idle_timeout.state != "Printing"}
-#name: Turn off Pi
-#gcode:
-#     M117 Shutdown_RPI
-#     M118 Shutdown_RPI
-#     { menu.exit() }
-#     UPDATE_DELAYED_GCODE ID=shutdown_machine DURATION=1
-
-[delayed_gcode reboot_machine]
-gcode:
-     LightsOff
-     {action_call_remote_method("reboot_machine")}
-initial_duration: 0.0
-
-#[menu __main __rebootpi]
-#type: command
-#enable: {printer.idle_timeout.state != "Printing"}
-#name: Reboot Pi
-#gcode:
-#     M117 Reboot_RPI
-#     M118 Reboot_RPI
-#     { menu.exit() }
-#     UPDATE_DELAYED_GCODE ID=reboot_machine DURATION=1
-
-#[menu __main __heatsoak]
-#type: command
-#enable: {printer.idle_timeout.state != "Printing"}
-#name: Heatsoak
-#gcode: HEATSOAK
-#     { menu.exit() }
-
-#[menu __main __lightson]
-#type: command
-#name: Lights On
-#gcode: LightsOn
-#     { menu.exit() }
-
-#[menu __main __lightsoff]
-#type: command
-#name: Lights Off
-#gcode: LightsOff
-#     { menu.exit() }
-
 [gcode_macro G32]
 gcode:
     SAVE_GCODE_STATE NAME=STATE_G32
@@ -189,13 +138,12 @@ gcode:
     RESTORE_GCODE_STATE NAME=STATE_G32
 
 [gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED = params.BED|int %} ; Get bed temp from gcode
     {% set HOTEND = params.HOTEND|int %} ; Get nozzle temp from gcode
     {% set CHAMBERTEMP = params.CHAMBERTEMP|default(0)|int %} ; Get chamber temp from gcode
     Red
-    status_heating
+    STATUS_HEATING
     HEATSOAK heatsoak_temp={BED}
     M190 S{BED} # wait for bed temperature
     TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={CHAMBERTEMP}
@@ -203,20 +151,17 @@ gcode:
     M117 Initializing...
     G90
     BED_MESH_CLEAR
-    status_homing
+    STATUS_HOMING
     G32                            ; home all axes
-    status_meshing
+    STATUS_MESHING
     BED_MESH_CALIBRATE ADAPTIVE=1
     BUCKET
     Red
-    status_heating
+    STATUS_PRINTING
     M109 S{HOTEND} # wait for hotend temperature
-    CLEAN_NOZZLE
     G1 Z20 F3000                   ; move nozzle away from bed
     White
-    #LINE_PURGE
-    VORON_PURGE
-    status_printing
+    STATUS_PRINTING
     M117
 
 [gcode_macro PRINT_END]
@@ -358,31 +303,3 @@ gcode:
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
 
-[gcode_macro START_PRINT]
-gcode:
-  M104 S150 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling
-  G4 S10 ; allow partial nozzle warmup
-  {% set BED_TEMP = params.BED_TEMP|default(65)|float %}
-  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(220)|float %}
-  M140 S{BED_TEMP} ; Start bed heating
-  G90 ; Use absolute coordinates
-  SET_FAN_SPEED FAN=Nevermore SPEED=0.50
-  STATUS_HOMING
-  G32 ; Home all axes and QGL
-  STATUS_LEVELING
-  BED_MESH_CALIBRATE ADAPTIVE=1
-  G1 Z2.0 F3000 ; Move Z Axis up little to prevent scratching of Heat Bed
-  #G1 X12 Y20 Z30 F5000.0 ; Move to start position
-  BUCKET
-  STATUS_HEATING
-  M190 S{BED_TEMP} ; Wait for bed to reach temperature
-  M109 S{EXTRUDER_TEMP} ; Set and wait for nozzle to reach temperature
-  STATUS_PRINTING
-  G92 E0
-
-[gcode_macro BLOB_OUT]
-gcode:
-  BLOBIFIER_SERVO POS=out
-[gcode_macro BLOB_IN]
-gcode:
-  BLOBIFIER_SERVO POS=in
