--- a/printer.cfg
+++ b/printer.cfg
@@ -49,7 +49,7 @@ on_error_gcode: CANCEL_PRINT
 [include skirt_button_pcb.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
-[include KAMP_Settings.cfg]
+#[include KAMP_Settings.cfg]
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
