--- a/moonraker.conf
+++ b/moonraker.conf
@@ -43,14 +43,6 @@ path: ~/klipper-led_effect
 origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
 
-[update_manager Klipper-Adaptive-Meshing-Purging]
-type: git_repo
-channel: dev
-path: ~/Klipper-Adaptive-Meshing-Purging
-origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
-managed_services: klipper
-primary_branch: main
-
 # Crowsnest update_manager entry
 [update_manager crowsnest]
 type: git_repo
@@ -58,16 +50,6 @@ path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
 managed_services: crowsnest
 install_script: tools/pkglist.sh
-
-[include moonraker-obico-update.cfg]
-
-[update_manager moonraker-telegram-bot]
-type: git_repo
-path: ~/moonraker-telegram-bot
-origin: https://github.com/nlef/moonraker-telegram-bot.git
-env: ~/moonraker-telegram-bot-env/bin/python
-requirements: scripts/requirements.txt
-install_script: scripts/install.sh
 
 [update_manager happy-hare]
 type: git_repo
@@ -98,3 +80,10 @@ origin: https://github.com/mainsail-crew/sonar.git
 primary_branch: main
 managed_services: sonar
 install_script: tools/install.sh
+
+[update_manager voron-klipper-extensions]
+type: git_repo
+path: ~/voron-klipper-extensions
+origin: https://github.com/voidtrance/voron-klipper-extensions.git
+install_script: install-extensions.sh
+managed_services: klipper
