--- a/printer.cfg
+++ b/printer.cfg
@@ -46,15 +46,13 @@ on_error_gcode: CANCEL_PRINT
 #[include sb2040.cfg]
 [include sb2209.cfg]
 #[include klipperExpander.cfg]
-[include skirt_button_pcb.cfg]
+#[include skirt_button_pcb.cfg]
 [include stealthburner_led_effects_3_leds.cfg]
 [include led_effects.cfg]
 #[include KAMP_Settings.cfg]
 [include macros.cfg]
 [include purge_nozzle.cfg]
 [include nevermore.cfg]
-[include moonraker_obico_macros.cfg]
-#[include telegram_bot.cfg]
 [include shell_command.cfg]
 [include knomi.cfg]
 #[include stealthburner_leds.cfg]
