--- a/macros.cfg
+++ b/macros.cfg
@@ -17,8 +17,8 @@ gcode:
 	M104 S150 ; set hotend to 150 and don't wait
 	M140 S{ params.HEATSOAK_TEMP|default(0)|int } ; heat bed and don't wait
 	CG28 ; conditional home
-	G90 ; absolute positioning
-	G1 X55 Y350 F6800 ; Move to bucket
+	#G90 ; absolute positioning
+	#G1 X55 Y350 F6800 ; Move to bucket
 
 [gcode_macro SWIPENOZZLE]
 gcode:
