--- a/startprint.cfg
+++ b/startprint.cfg
@@ -78,6 +78,7 @@ gcode:
 
   # Heats up the nozzle up to target via data from slicer
   RED
+  BUCKET
   SET_DISPLAY_TEXT MSG="Hotend: {target_extruder}c"             # Displays info
   STATUS_HEATING                                                # Sets SB-leds to heating-mode
   G1 X{x_wait} Y{y_wait} Z15 F9000                              # Goes to center of the bed
@@ -86,6 +87,7 @@ gcode:
 
   # Gets ready to print by doing a purge line and updating the SB-leds
   WHITE
+  SWIPENOZZLE
   SET_DISPLAY_TEXT MSG="Printer goes brr"          # Displays info
   STATUS_PRINTING                                  # Sets SB-leds to printing-mode
   G0 X{x_wait - 50} Y4 F10000                      # Moves to starting point
